--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "0.8.7",
     "bluebird": "3.3.4",
     "body-parser": "1.15.0",
+    "dotenv": "2.0.0",
     "express": "4.13.4",
     "mongodb": "2.1.18",
     "node-uuid": "1.4.7"
